--- a/plugins/nice-select/nice-select.css
+++ b/plugins/nice-select/nice-select.css
@@ -117,7 +117,7 @@
       background-color: transparent !important; 
   }
   .nice-select .option {
-    color: #162842;
+    color: #172B5B;
     cursor: pointer;
     font-weight: 400;
     line-height: 40px;
