--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -359,7 +359,7 @@
   color: var(--color-one);
 }
 
-.aside_open {
+.aside_open d-xl-none {
   position: relative;
   background-color: var(--color-two);
   border: none;
@@ -371,17 +371,17 @@
   padding: 10px;
   transition: var(--transition-base);
 }
-.aside_open:hover img {
+.aside_open d-xl-none:hover img {
   margin: 0 auto;
   transition: var(--transition-base);
 }
-.aside_open:hover {
+.aside_open d-xl-none:hover {
   background-color: var(--color-one);
 }
-.aside_open:hover img {
+.aside_open d-xl-none:hover img {
   transform: rotateY(180deg);
 }
-.aside_open .line {
+.aside_open d-xl-none .line {
   background-color: var(--color-white);
   width: 100%;
   height: 0.125rem;
@@ -390,15 +390,15 @@
   transition: var(--transition-base);
 }
 
-.aside_open .line:not(:last-child) {
+.aside_open d-xl-none .line:not(:last-child) {
   margin-bottom: 0.25rem;
 }
 
-.aside_open .line:nth-child(2) {
+.aside_open d-xl-none .line:nth-child(2) {
   width: var(--fs-12);
 }
 
-.aside_open:hover .line:nth-child(2) {
+.aside_open d-xl-none:hover .line:nth-child(2) {
   width: var(--fs-14);
 }
 
@@ -783,7 +783,7 @@ body.left_menu .mr_menu {
   color: var(--color-white);
 }
 
-.header.style2 .aside_open {
+.header.style2 .aside_open d-xl-none {
   margin-left: 30px;
 }
 
